Tests and associated work

--- a/samples/Fable.React.Tailwind.Sample/src/Fable.React.Tailwind.Sample.fsproj
+++ b/samples/Fable.React.Tailwind.Sample/src/Fable.React.Tailwind.Sample.fsproj
@@ -6,6 +6,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Layout.fs" />
+    <Compile Include="..\..\Common\Model.fs">
+      <Link>Model.fs</Link>
+    </Compile>
     <Compile Include="..\..\Common\ExampleForm.fs">
       <Link>ExampleForm.fs</Link>
     </Compile>
