--- a/.github/workflows/buildandtest.yml
+++ b/.github/workflows/buildandtest.yml
@@ -30,8 +30,11 @@ jobs:
       run: dotnet build
       working-directory: "tests/FormSharp.Acceptance.Tests"
     - name: Install playwright
-      run: npx playwright install --with-deps
       working-directory: "tests/FormSharp.Acceptance.Tests"        
+      #run: npx playwright install --with-deps
+      run: |
+        dotnet tool install --global Microsoft.Playwright.CLI
+        playwright install      
     
     - name: Install Fable tools
       working-directory: "samples/Fable.React.Tailwind.Sample"
