--- a/samples/Fable.React.Tailwind.Sample/src/Fable.React.Tailwind.Sample.fsproj
+++ b/samples/Fable.React.Tailwind.Sample/src/Fable.React.Tailwind.Sample.fsproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Fable.Browser.Dom" Version="2.2.0" />
     <PackageReference Include="Fable.Core" Version="3.3.1" />
     <PackageReference Include="Fable.Fetch" Version="2.3.1" />
+    <PackageReference Include="Fable.Remoting.Client" Version="7.16.0" />
     <PackageReference Include="Feliz" Version="1.52.0" />
     <PackageReference Include="Thoth.Json" Version="6.0.0" />
   </ItemGroup>
