--- a/samples/SimpleServer/SimpleServer.fsproj
+++ b/samples/SimpleServer/SimpleServer.fsproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Fable.Remoting.Giraffe" Version="5.7.0-rc-6" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="Saturn" Version="0.15.0" />
       <PackageReference Include="Thoth.Json.Giraffe" Version="5.0.0" />
