--- a/samples/Fable.React.Tailwind.Sample/src/Fable.React.Tailwind.Sample.fsproj
+++ b/samples/Fable.React.Tailwind.Sample/src/Fable.React.Tailwind.Sample.fsproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Fable.Fetch" Version="2.3.1" />
     <PackageReference Include="Fable.Remoting.Client" Version="7.16.0" />
     <PackageReference Include="Feliz" Version="1.52.0" />
+    <PackageReference Include="Feliz.Router" Version="3.8.0" />
     <PackageReference Include="Thoth.Json" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
