--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-      ref: ${{ github.ref }}
+      with:
+        ref: ${{ github.ref }}
     
     - name: Setup .NET Core 5.0
       uses: actions/setup-dotnet@v1
