--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,7 @@
 name: Release NuGet packages
-on: release
+on:
+  release:
+    types: [created]
 
 # This release script works on the basis that releases are named with the pattern v0.0.0
 jobs:
